  * Clarify dpkg-genchanges error message on binary builds without any binary
    artifact built. Closes: #726520
  * Improve dpkg-source warning message when ignoring file removals,
    by adding a hint about the --include-removal option.
    Thanks to Moritz Muehlenhoff <jmm@debian.org>. Closes: #738310
  * Add a new dpkg-source extraction --ignore-bad-version option.
    Closes: #740883

  [ Updated dpkg translations ]
  * German (Sven Joachim).
  * Swedish (Peter Krefting).
  * Thai (Theppitak Karoonboonyanan). Closes: #745032
  * Vietnamese (Trần Ngọc Quân).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Swedish (Peter Krefting).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).
  * Italian (Beatrice Torracca). Closes: #742449
  * Swedish (Peter Krefting).
 
 -- Guillem Jover <guillem@debian.org>  Wed, 15 Jan 2014 19:02:55 +0100

dpkg (1.17.6) unstable; urgency=low

  [ Guillem Jover ]
  * Move signing in dpkg-buildpackage to the end of the build.
  * Add new --check-command and --check-option options to dpkg-buildpackage,
    and DEB_CHECK_COMMAND environment variable as a default value, to
    specify a package checker to use before the signing process.
  * Detect a missing gain-root-command even if dpkg-buildpackage is running
    as root.
  * Detect a missing sign-command in dpkg-buildpackage, before starting the
    build, to avoid a failure at the end of the process.
  * Remove trailing newlines from dpkg-deb warning message.
  * Change dpkg-deb conffile name length warning into an error, as dpkg will
    reject those packages at install time anyway.
  * Unify and clarify dpkg-deb and dpkg conffile name length error message.
    Closes: #108196
  * Add new start-stop-daemon --pid option. Closes: #253265
  * Mention Multi-Arch: no value in man pages. Closes: #732648
  * Correctly hyphenate binary-only and source-only in dpkg-buildpackage
    output messages.