@@ -32,6 +32,10 @@ dpkg (1.17.7) UNRELEASED; urgency=low
     Thanks to Moritz Muehlenhoff <jmm@debian.org>. Closes: #738310
   * Add a new dpkg-source extraction --ignore-bad-version option.
     Closes: #740883
+  * Add Architecture and Build-Profiles information to Package-List field,
+    as optional name=value1,value2 entries, with names «arch» and «profile».
+    Use the now recognized field Build-Profiles from binary stanzas in the
+    source control file to fill the «profile» value.
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
